--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body,
 .content {
   height: 100%;
   width: 100%;
-  font-family: 'Preahvihear', sans-serif;
+  font-family: 'DM Sans', sans-serif;
   /* font-family: 'Source Sans Pro', sans-serif; */
 }
 
